[gd_scene load_steps=4 format=3 uid="uid://6gul4yn6koen"]

[ext_resource type="Theme" uid="uid://cxxipod7ij704" path="res://Resources/Themes/DIALOG_FONT.tres" id="1_qddvt"]
[ext_resource type="Script" uid="uid://d0s746060f4x" path="res://Scripts/Dialog/ReplicasBox.gd" id="1_t1yfr"]
[ext_resource type="PackedScene" uid="uid://c6dygmnny2usk" path="res://Scenes/Dialog/speaker.tscn" id="2_5hsq4"]

[node name="ReplicasBox" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_qddvt")
script = ExtResource("1_t1yfr")

[node name="TextFrame" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -950.0
offset_top = -128.0
offset_right = 950.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.113725, 0.113725, 1)

[node name="TextLabel" type="Label" parent="TextFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = 29.0
offset_right = -52.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "fdsfsdfdsfsdf"
autowrap_mode = 2

[node name="SpeakerLeft" parent="." instance=ExtResource("2_5hsq4")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -950.0
offset_top = -128.0
offset_right = -910.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeakerRight" parent="." instance=ExtResource("2_5hsq4")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 566.0
offset_top = -128.0
offset_right = 606.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
